# sapien-vulkan-2

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
app/: camera_controller.hpp  compute.cpp  gencube.cpp  glslc_embed.cpp  main.cpp  vr.cpp
app/assets/: cornell-box.glb
cmake/: assimp.cmake  assimp.patch.CMakeLists.txt  easy_profiler.cmake  easy_profiler.patch.CMakeLists.txt  glfw.cmake  glm.cmake  glslang.cmake  imgui.cmake  ktx.cmake  oidn.cmake  openexr.cmake  openvr.cmake  openvr_definitions.h  spdlog.cmake  spirv-cross.cmake  vulkan.cmake
doc/shader/: ao.org  axis.org  composite.org  deferred.org  gbuffer.org  shader.html  shader.org  shadow.org  transparency.org
include/svulkan2/common/: assimp.h  config.h  cuda_helper.h  err.h  format.h  fs.h  glm.h  image.h  launch_policy.h  layout.h  log.h  profiler.h  vk.h  vk_format.h
include/svulkan2/common/fonts/: roboto.hpp
include/svulkan2/core/: allocator.h  as.h  buffer.h  command_buffer.h  command_pool.h  context.h  cuda_buffer.h  descriptor_pool.h  device.h  image.h  instance.h  mesh.h  physical_device.h  queue.h  texture2d.h
include/svulkan2/renderer/: denoiser.h  gui.h  renderer.h  renderer_base.h  rt_renderer.h  vr.h
include/svulkan2/resource/: camera.h  cubemap.h  image.h  light.h  lineset.h  manager.h  material.h  mesh.h  model.h  object.h  primitive_set.h  render_config.h  render_target.h  scene.h  shape.h  storage_image.h  texture.h
include/svulkan2/scene/: camera.h  light.h  loader.h  node.h  object.h  scene.h  scene_group.h  transform.h
include/svulkan2/shader/: base_parser.h  brdf_lut.h  composite.h  compute.h  compute_module.h  deferred.h  gbuffer.h  glsl_compiler.h  latlong_to_cubemap.h  line.h  manager.h  pcd.h  postprocessing.h  prefilter.h  primitive.h  primitive_shadow.h  reflect.h  rt.h  shader.h  shaderManager.h  shader_manager.h  shader_pack.h  shader_pack_instance.h  shader_pack_rt.h  shadow.h  shadowmap.h
include/svulkan2/ui/: button.h  checkbox.h  conditional.h  dummy.h  filechooser.h  gizmo.h  image.h  keyframe.h  options.h  popup.h  radio_button_group.h  sameline.h  section.h  selectable.h  slider.h  text.h  treenode.h  ui.h  widget.h  window.h
patches/: glfw-3.3.3-for-apple.patch  openvr-v2.2.3-for-apple.patch
shader/compute/: local_scan.comp  scan.comp
shader/default/: deferred.frag
shader/default_viewer/: deferred.frag
shader/forward/: gbuffer.frag
shader/full/: ao.frag  composite0.frag  deferred.frag  gbuffer.vert  gbuffer1.frag  gbuffer1.vert  gbuffer2.vert
shader/full2/: composite0.frag  composite1.frag  composite2.frag  composite4.frag  deferred.frag  gbuffer1.frag  test.glsl
shader/full2/partial/: light_functions.glsl  lights.glsl
shader/ibl/: composite0.frag  deferred.frag  gbuffer.frag  gbuffer1.frag  gbuffer2.frag  point.vert
shader/minimal/: gbuffer.frag
shader/rt/: a.spv  camera.rahit  camera.rchit  camera.rgen  camera.rmiss  geometry.glsl  point.rchit  point.rint  postprocessing.comp  push_constant.glsl  ray.glsl  shadow.rmiss
shader/rt_test/: camera.rahit  camera.rchit  camera.rgen  camera.rmiss  geometry.glsl  push_constant.glsl  ray.glsl
shader_internal/: brdf_lut.comp  hexembed.c  latlong_to_cube.comp  prefilter.comp
src/common/: assimp.cpp  cuda_helper.h  format.cpp  fs.cpp  image.cpp  layout.cpp  log.cpp  logger.cpp  logger.h  profiler.cpp  vk_format.cpp
src/core/: allocator.cpp  as.cpp  buffer.cpp  command_buffer.cpp  command_pool.cpp  context.cpp  cuda_buffer.cpp  descriptor_pool.cpp  device.cpp  image.cpp  instance.cpp  mesh.cpp  physical_device.cpp  queue.cpp  texture2d.cpp
src/renderer/: denoiser.cpp  denoiser.h  denoiser_oidn.cpp  denoiser_optix.cpp  gui.cpp  renderer.cpp  renderer_base.cpp  rt_renderer.cpp  vr.cpp
src/resource/: camera.cpp  cubemap.cpp  image.cpp  lineset.cpp  manager.cpp  material.cpp  mesh.cpp  mesh_primitives.cpp  model.cpp  object.cpp  primitive_set.cpp  render_target.cpp  scene.cpp  shape.cpp  storage_image.cpp  texture.cpp
src/scene/: camera.cpp  light.cpp  loader.cpp  node.cpp  object.cpp  scene.cpp  scene_group.cpp
src/shader/: base_parser.cpp  composite.cpp  compute.cpp  compute_module.cpp  deferred.cpp  gbuffer.cpp  glsl_compiler.cpp  line.cpp  pcd.cpp  postprocessing.cpp  primitive.cpp  primitive_shadow.cpp  reflect.cpp  reflect.h  rt.cpp  shaderManager.cpp  shader_manager.cpp  shader_pack.cpp  shader_pack_instance.cpp  shadow.cpp  shadowmap.cpp
src/ui/: button.cpp  checkbox.cpp  conditional.cpp  dummy.cpp  filechooser.cpp  gizmo.cpp  image.cpp  keyframe.cpp  options.cpp  popup.cpp  radio_button_group.cpp  sameline.cpp  section.cpp  selectable.cpp  slider.cpp  text.cpp  treenode.cpp  widget.cpp  window.cpp
test/: gbuffer.cpp
test/assets/scene/sponza/: sponza.mtl  sponza2.mtl
test/assets/shader/: composite_minimal.frag  deferred_minimal.frag  deferred_minimal.vert  gbuffer_minimal.frag  gbuffer_minimal.vert  shadowmap_minimal.vert
test/assets/shader/full/: deferred.frag  gbuffer.frag  gbuffer1.frag  pcd.frag  pcd.vert
test/core/: buffer.cpp  context.cpp  cuda_buffer.cpp  image.cpp  rt.cpp
test/resource/: manager.cpp
test/shader/: composite.cpp  deferred.cpp  gbuffer.cpp  gbuffer_minimal.frag  manager.cpp  rt.cpp  shader_pack.cpp  shadowmap.cpp
